<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_text"
        android:textSize="60px"
        app:layout_constraintBottom_toTopOf="@+id/conTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/conTable"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <TableRow
            android:id="@+id/rowHeader"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/tvA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_A"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_B"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_AB"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/r1c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/true_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/r1c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/true_text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/r1c3"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:hint="Choose T or F"
                android:maxLength="1" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/r2c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/true_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/r2c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/false_text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/r2c3"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:hint="Choose T or F"
                android:maxLength="1" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/r3c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/false_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/r3c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/true_text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/r3c3"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:hint="Choose T or F"
                android:maxLength="1" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/r4c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/true_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/r4c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/false_text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/r4c3"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:hint="Choose T or F"
                android:maxLength="1" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conTable" />

</androidx.constraintlayout.widget.ConstraintLayout>